--- a/Template/Department/index.html
+++ b/Template/Department/index.html
@@ -69,9 +69,12 @@
                 <th data-field="name">Name</th>
                 <th data-field="gender">Gender</th>
                 <th data-field="pin">Pin Code</th>
+                <th data-field="keralite">Nativity</th>
                 <th data-field="year_back">Year Back</th>
                 <th data-field="cat">Category</th>
                 <th data-field="year">Year of Study</th>
+                <th data-field="pm">PrimeMinister</th>
+                <th data-field="handi">Handicapped</th>
                 <th data-field="looking">Submit</th>
             </tr>
             </thead>
@@ -80,7 +83,7 @@
             </tbody>
         </table>
     </div>
-    <a class="main-button icon-button" onclick="priority()">Submit All</a>
+    <a class="main-button icon-button" onclick="priority()">Create Priority List</a>
 {% endblock %}
 
 {% block scripts %}
