--- a/Template/Department/index.html
+++ b/Template/Department/index.html
@@ -69,6 +69,7 @@
                 <th data-field="name">Name</th>
                 <th data-field="gender">Gender</th>
                 <th data-field="pin">Pin Code</th>
+                <th data-field="distance">Distance</th>
                 <th data-field="keralite">Nativity</th>
                 <th data-field="year_back">Year Back</th>
                 <th data-field="cat">Category</th>
@@ -84,6 +85,8 @@
         </table>
     </div>
     <a class="main-button icon-button" onclick="priority()">Create Priority List</a>
+    <a class="link_distance" target="_blank" href="http://gstserver.com/tools/distance-between-pin-codes/">Link for
+        distance calculation</a>
 {% endblock %}
 
 {% block scripts %}
