--- a/Template/Department/get_data.html
+++ b/Template/Department/get_data.html
@@ -16,6 +16,7 @@
             </td>
 
             <td style="" class="pincode"><input type="number" value="{{ model.Pincode }}" class="pin"></td>
+            <td style="" class="distance"><input type="number" value="{{ model.distance }}" class="dist"></td>
             <td class="rs-select2 js-select-simple select--no-search keralaite">
                 <select class="keralaite_desc">
                     <option disabled="disabled" selected="selected">
