--- a/Template/Department/index.html
+++ b/Template/Department/index.html
@@ -52,6 +52,13 @@
             </select>
             <div class="select-dropdown">
             </div>
+            <select style="margin: 10px 0px" class="rs-select2 js-select-simple select--no-search" name="verification" id="verification"
+                    onchange="load_data()">
+                <option disabled="disabled" selected="selected">First Years
+                    </option>
+                <option value="1">Seniors</option>
+                <option value="0">First Years</option>
+            </select>
         </div>
     </div>
 
